--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
   <div class="max-w-4xl mx-auto px-4">
     <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Endorsements</h2>
     <a href="#national-endorsements" class="nav-link"><i>See National Leaders</i></a>
+    <a>Helpful vocabulary: ADP = Arizona Democratic Party,  LD = Legislative District, SCM = (ADP) State Committee Member, PC = Precinct Committeeperson</a>
     <!-- Arizona Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mb-4">Arizona Leaders</h3>
     <ul id="arizona-endorsements" class="space-y-2">
@@ -221,125 +222,125 @@
       <li><strong>Eric Robbins</strong>, Chair, Pima County Democratic Party</li>
       <li><strong>Nick Collins</strong>, Secretary, ADP Progressive Council</li>
       <li><strong>Dan O’Neal</strong>, State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
-      <li><strong>Emily Kirkland</strong>, PC, LD-8; former Executive Director, Progress Arizona</li>
-      <li><strong>Paul Stapleton-Smith</strong>, State Committee Member LD21</li>
+      <li><strong>Emily Kirkland</strong>, PC, LD 8, Former Executive Director, Progress Arizona</li>
+      <li><strong>Paul Stapleton-Smith</strong>, SCM, LD 21</li>
       <li><strong>Sen. Catherine Miranda</strong>, Senate Democratic Assistant Leader, LD 11</li>
       <li><strong>Sen. Analise Ortiz</strong>, LD 24</li>
       <li><strong>Rep. Mariana Sandoval</strong>, LD 13</li>
       <li><strong>Rep. Brian Garcia</strong>, LD 8</li>
-      <li><strong>Melissa Galarza</strong>, LD12 State Committee Member</li>
-      <li><strong>Nicolas Mink</strong>, Vice Chair for the Arizona Democratic Party</li>
-      <li><strong>Shawnte Rothschild</strong>, ADP Vice Chair</li>
+      <li><strong>Melissa Galarza</strong>, SCM, LD 12</li>
+      <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
+      <li><strong>Shawnte Rothschild</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Sarah Stuart</strong>, President, Arizona College Democrats; Coconino County Democratic Party, Youth Committee Chair; PC, LD 7</li>
       <li><strong>Laura Carter</strong>, Chair, Coconino County Democratic Party</li>
       <li><strong>Martín J. Quezada</strong>, Former State Senator, LD 29</li>
       <li><strong>Richard Andrade</strong>, Former State Representative, LD 29</li>
-      <li><strong>Celia Barotz</strong>, Former Vice Mayor of Flagstaff, PC LD 6, State Committee Member</li>
-      <li><strong>Eva Putzova</strong>, Former Flagstaff City Councilmember, LD6 State Committee Member</li>
+      <li><strong>Celia Barotz</strong>, Former Vice Mayor of Flagstaff, SCM, LD 6</li>
+      <li><strong>Eva Putzova</strong>, Former Flagstaff City Councilmember, SCM, LD 6</li>
       <li><strong>Connie Cockrell</strong>, Chair, Gila County Democrats</li>
       <li><strong>Alison Porter</strong>, Co-Chair, ADP Small Business Council; Co-Founder, Save Our Schools</li>
-      <li><strong>Ben Armentrout</strong>, President, University of Arizona College Democrats; Youth Representative, ADP Progressive Council, PC, LD20</li>
-      <li><strong>Jess Staggers</strong>, Membership Director, Maricopa County Young Democrats; SCM, LD 29</li>
-      <li><strong>Angela Buer</strong>, Former Chair LD 9 Dems</li>
-      <li><strong>Joan B. McDermott</strong>, MCDCC District 3 Chair</li>
+      <li><strong>Ben Armentrout</strong>, President, University of Arizona College Democrats, Youth Representative, ADP Progressive Council, PC, LD 20</li>
+      <li><strong>Jess Staggers</strong>, Membership Director, Maricopa County Young Democrats, SCM, LD 29</li>
+      <li><strong>Angela Buer</strong>, Former Chair, LD 9 Democratic Party</li>
+      <li><strong>Joan B. McDermott</strong>, Chair, MCDCC District 3</li>
       <li><strong>Jeffrey Tucker</strong>, SCM, LD 13, At-Large Board Member</li>
       <li><strong>Alex Kack</strong>, Executive Director, Pima County Democratic Party</li>
-      <li><strong>Dhruv Rebba</strong>, Co-Chair ADP AAPI Caucus, ASU Young Dems Vice President</li>
+      <li><strong>Dhruv Rebba</strong>, Co-Chair, ADP AAPI Caucus, Vice President, ASU Young Dems</li>
       <li><strong>Susie Thornton</strong>, Secretary & SCM, LD 12</li>
-      <li><strong>Alex Ray Sanchez</strong>, Pima County Democratic Party Communications Chair</li>
-      <li><strong>Ann Heitland</strong>, Former Senior Vice-Chair ADP and Former Coconino County Democratic Party Chair</li>
-      <li><strong>Brianna Westbrook</strong>, Former Vice Chair of Arizona Democratic Party</li>
-      <li><strong>Natacha Chavez</strong>, Vice Chair, ADP Progressive Council, LD 22 State Committee Member</li>
+      <li><strong>Alex Ray Sanchez</strong>, Communications Chair, Pima County Democratic Party, Southern Arizona Vice Chair, ADP Progressive Council</li>
+      <li><strong>Ann Heitland</strong>, Former Senior Vice-Chair, ADP, Former Chair, Coconino County Democratic Party</li>
+      <li><strong>Brianna Westbrook</strong>, Former Vice Chair, Arizona Democratic Party</li>
+      <li><strong>Natacha Chavez</strong>, Vice Chair, ADP Progressive Council, SCM, LD 22</li>
       <li><strong>Thomas Dunning</strong>, 1st Vice President, Democrats of Rim Country</li>
-      <li><strong>Betts Putnam-Hidalgo</strong>, PC and SCM LD 20; Former Co-Chair, ADP Progressive Council</li>
+      <li><strong>Betts Putnam-Hidalgo</strong>, SCM, LD 20, Former Co-Chair, ADP Progressive Council</li>
       <li><strong>Athena Shao</strong>, Director of Political Affairs, AZ College Democrats</li>
-      <li><strong>Suzi Walling</strong>, Former Chair LD29, Former President Grand Democrats, State Committee Member</li>
+      <li><strong>Suzi Walling</strong>, SCM & Former Chair, LD 29, Former President, Grand Democrats</li>
       <li><strong>Michael Bradley</strong>, SCM, LD 4</li>
       <li><strong>Marilyn Weissman</strong>, PC, LD 6</li>
       <li><strong>Donna Hanley</strong>, SCM, LD 7</li>
-      <li><strong>Charlie Silver</strong>, SCM, LD6</li>
+      <li><strong>Charlie Silver</strong>, SCM, LD 6</li>
       <li><strong>Ken Kenegos</strong>, SCM, LD 18</li>
       <li><strong>Cathy Ransom</strong>, SCM, LD 1</li>
-      <li><strong>Mike Fogel</strong>, SCM, LD 1, '22 & '24 Clean Election Senate Candidate, LD 1</li>
+      <li><strong>Mike Fogel</strong>, SCM, '22 & '24 Clean Election Senate Candidate, LD 1</li>
       <li><strong>Kathy Fitzmaurice Yontz</strong>, SCM, LD 12</li>
-      <li><strong>Peter Cerchiara</strong>, LD 3 2nd VC Community Engagement</li>
-      <li><strong>Jessica Chalberg</strong>, LD 21 PC</li>
-      <li><strong>Roemello Chavez</strong>, LD 8 PC</li>
-      <li><strong>Michael David Bryan</strong>, State Committee Member; VP, Democrats of Greater Tucson</li>
-      <li><strong>Kevin Glover</strong>, LD 3 PC & State Committee Member</li>
-      <li><strong>Mikah Dyer</strong>, LD 28 PC</li>
-      <li><strong>Connor Roland</strong>, Young Democrats of AZ Northern Development VP; PC LD 13</li>
-      <li><strong>Eric Stafford</strong>, Vice Chair LD 29</li>
-      <li><strong>Sharon Regen</strong>, LD 1 State Committee Member</li>
-      <li><strong>Sherri Johnson</strong>, LD 12 State Committee Member</li>
-      <li><strong>James Jursich</strong>, PC LD 12</li>
-      <li><strong>Nancy Scharff</strong>, LD1 State Committee Member</li>
-      <li><strong>Karen Dubin</strong>, State Committee Member</li>
-      <li><strong>Ruthee Goldkorn</strong>, SCM LD 28</li>
+      <li><strong>Peter Cerchiara</strong>, 2nd VC Community Engagement, LD 3</li>
+      <li><strong>Jessica Chalberg</strong>, PC, LD 21</li>
+      <li><strong>Roemello Chavez</strong>, PC, LD 8</li>
+      <li><strong>Michael David Bryan</strong>, SCM, VP, Democrats of Greater Tucson</li>
+      <li><strong>Kevin Glover</strong>, SCM, LD 3</li>
+      <li><strong>Mikah Dyer</strong>, PC, LD 28</li>
+      <li><strong>Connor Roland</strong>, Northern Development VP, Young Democrats of AZ, PC, LD 13</li>
+      <li><strong>Eric Stafford</strong>, Vice Chair, LD 29</li>
+      <li><strong>Sharon Regen</strong>, SCM, LD 1</li>
+      <li><strong>Sherri Johnson</strong>, SCM, LD 12</li>
+      <li><strong>James Jursich</strong>, PC, LD 12</li>
+      <li><strong>Nancy Scharff</strong>, SCM, LD 1</li>
+      <li><strong>Karen Dubin</strong>, SCM</li>
+      <li><strong>Ruthee Goldkorn</strong>, SCM, LD 28</li>
       <li><strong>Marshall Militano</strong>, 2nd Vice Chair, LD 27</li>
-      <li><strong>Shasta Guthrie</strong>, Yavapai County 2nd VC; LD1 SCM</li>
-      <li><strong>George Mcgaughey</strong>, Chair, LD 19</li>
+      <li><strong>Shasta Guthrie</strong>, 2nd VC, Yavapai County Democratic Party, SCM, LD1</li>
+      <li><strong>George McGaughey</strong>, Chair & SCM, LD 19</li>
       <li><strong>Leigh Emrick</strong>, PC</li>
-      <li><strong>Bernard Buddy Fleitz</strong>, State Committee member</li>
-      <li><strong>James Perry Durand</strong>, 1st Vice Chair LD 25</li>
+      <li><strong>Bernard Buddy Fleitz</strong>, SCM, LD 1</li>
+      <li><strong>James Perry Durand</strong>, 1st Vice Chair, LD 25</li>
       <li><strong>William Olear</strong>, Chair, LD 25</li>
-      <li><strong>Marlene Bluestein</strong>, LD 18 State committee member</li>
-      <li><strong>Susan Heck, M.S., FNP (retired)</strong>, PC, LD 17</li>
+      <li><strong>Marlene Bluestein</strong>, SCM, LD 18</li>
+      <li><strong>Susan Heck, M.S., FNP</strong>, PC, LD 17</li>
       <li><strong>Stephen Harshman</strong>, Chair, The Apache Junction Democrats</li>
       <li><strong>Lin Ogburn</strong>, SCM, LD 5</li>
-      <li><strong>Sean Feeney</strong>, LD 22 PC</li>
-      <li><strong>Timothy Kosse</strong>, First Vice Chair Pima County Democratic Party, SCM</li>
-      <li><strong>Debra Block</strong>, SCM LD 6</li>
-      <li><strong>Donna Durand</strong>, Former Chair LD 25, PC, State Committee Person</li>
-      <li><strong>Catherine Ralls</strong>, PC, District 12</li>
-      <li><strong>Katherine Ginzel</strong>, LD 1 PC and State Committee Member</li>
-      <li><strong>Rivko Knox</strong>, LD 2 PC & State Cmte Member</li>
-      <li><strong>Vivian Perry</strong>, Executive Committee LD1, SCM LD1</li>
-      <li><strong>Rebecca Villalpando</strong>, SCM LD1</li>
-      <li><strong>Hunter Holt</strong>, 2nd Vice Chair of PCDP, President of Marana Unified School Board, State Senate Candidate LD 17</li>
-      <li><strong>Sue Heck, RN, MS, FNP(retired)</strong>, State Committee Member, PC LD17</li>
-      <li><strong>Aaron Essif</strong>, State Committee Member LD 17</li>
+      <li><strong>Sean Feeney</strong>, PC, LD 22</li>
+      <li><strong>Timothy Kosse</strong>, First Vice Chair, Pima County Democratic Party, SCM</li>
+      <li><strong>Debra Block</strong>, SCM, LD 6</li>
+      <li><strong>Donna Durand</strong>, Former Chair & State Committee Person, LD 25</li>
+      <li><strong>Catherine Ralls</strong>, PC, LD 12</li>
+      <li><strong>Katherine Ginzel</strong>, SCM, LD 1</li>
+      <li><strong>Rivko Knox</strong>, SCM, LD 2</li>
+      <li><strong>Vivian Perry</strong>, Executive Committee Member & SCM, LD1</li>
+      <li><strong>Rebecca Villalpando</strong>, SCM, LD 1</li>
+      <li><strong>Hunter Holt</strong>, 2nd Vice Chair, Pima County Democratic Party, President, Marana Unified School Board, State Senate Candidate, LD 17</li>
+      <li><strong>Aaron Essif</strong>, SCM, LD 17</li>
+      <li><strong>Ricky Spann</strong>, SCM</li>
+      <li><strong>Melissa Westbrook</strong>, SCM, LD 12</li>
+      <li><strong>Victoria Watson</strong>, Secretary, University of Arizona College Democrats</li>
+      <li><strong>Joshua Evans</strong>, PC</li>
+      <li><strong>David Gámez</strong>, PC & Treasurer, LD 21</li>
+      <li><strong>Marilyn Weissman</strong>, SCM, LD 6</li>
+      <li><strong>Mike Nickerson</strong>, SCM, LD 17</li>
+      <li><strong>Chris Donat</strong>, Candidate for Congress, AZ 06, PC, LD 17</li>
+      <li><strong>Gary Michiel Montiel</strong>, PC Chair</li>
+      <li><strong>Nikkie Iglar</strong>, Communications Director, Pima County Young Democrats</li>
+      <li><strong>Julie Tang</strong>, PC, LD 8 (Rolling Hills Precinct)</li>
+      <li><strong>Lila Dessen</strong>, University of Arizona College Democrat</li>
       <li><strong>Dylan Williams</strong>, Democratic Voter, Mesa</li>
-      <li><strong>Jacob Carlson</strong>, Democrat voter, Snowflake</li>
-      <li><strong>Lynn cannon</strong>, Democratic voter</li>
-      <li><strong>Julie Tang</strong>, Precinct Committeeman, LD8, Rolling Hills Precinct</li>
+      <li><strong>Jacob Carlson</strong>, Democrat Voter, Snowflake</li>
+      <li><strong>Lynn cannon</strong>, Democratic Voter</li>
       <li><strong>Jacob Gross</strong>, Democratic Voter, Phoenix</li>
-      <li><strong>Amy Axelrod</strong>, LD8 voter</li>
-      <li><strong>Kiel Revenew</strong>, Democratic voter - LD 8</li>
+      <li><strong>Amy Axelrod</strong>, Democratic Voter, LD 8</li>
+      <li><strong>Kiel Revenew</strong>, Democratic Voter, LD 8</li>
       <li><strong>Jacob Petray</strong>, Democratic Voter, Phoenix</li>
       <li><strong>Margie Gomez</strong>, Democratic Voter</li>
-      <li><strong>Joshua Evans</strong>, PC 81</li>
-      <li><strong>David Gámezm</strong>, PC, Treasurer, LD 21</li>
-      <li><strong>Melissa Westbrook</strong>, LD12 PC, SCM</li>
-      <li><strong>Victoria Watson</strong>, UA College Dems Secretary</li>
-      <li><strong>Anna Makin</strong>, member LD10</li>
+      <li><strong>Anna Makin</strong>, Democratic Voter, LD 10</li>
       <li><strong>Ellie Yar</strong>, Democratic Voter, Mesa</li>
-      <li><strong>Marilyn Weissman</strong>, State Committee Member, LD 6</li>
-      <li><strong>Mike Nickerson</strong>, State Committee Member</li>
-      <li><strong>Eric Paschal</strong>, Democratic Voter, Phoenix LD-5</li>
-      <li><strong>Christopher Oakley</strong>, Democratic Voter, LD8</li>
-      <li><strong>Chris Donat</strong>, Candidate for Congress, AZ-06 and LD17 PC</li>
-      <li><strong>Gary Michiel Montiel</strong>, Precinct Committee Chair</li>
+      <li><strong>Eric Paschal</strong>, Democratic Voter, Phoenix LD 5</li>
+      <li><strong>Christopher Oakley</strong>, Democratic Voter, LD 8</li>
       <li><strong>Rutger Hartmann Olden</strong>, Democratic Voter, Tucson</li>
-      <li><strong>Liila Dessen</strong>, University of Arizona College Democrat</li>
       <li><strong>Paola Campos Martinez</strong>, Democratic Voter</li>
-      <li><strong>Nikkie Iglar</strong>, Communications Director, PCYD</li>
-      <li><strong>Ricky Spann</strong>, PC State Committee person</li>
       <li><strong>Tyler Thalmann</strong>, Voter, Phoenix</li>
-      <li><strong>Henley Knex Gilles</strong>, Democratic voter, Tucson</li>
+      <li><strong>Henley Knex Gilles</strong>, Democratic Voter, Tucson</li>
     </ul>
     <!-- National Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mt-10 mb-4">National Leaders</h3>
     <ul id="national-endorsements" class="space-y-2">
-      <li><strong>Bernie Sanders</strong>, US Senator, Vermont</li>
+      <li><strong>Sen. Bernie Sanders</strong>, US Senator, Vermont</li>
       <li><strong>Lawrence Lessig</strong>, Chair, Equal Citizens</li>
-      <li><strong>Ro Khanna</strong>, US Congressman, CA-17</li>
+      <li><strong>Rep. Ro Khanna</strong>, US Congressman, CA-17</li>
       <li><strong>Larry Cohen</strong>, Past President Communication Workers of America; Board Chair, Our Revolution; DNC Member</li>
       <li><strong>Bill de Blasio</strong>, Former Mayor of New York City</li>
       <li><strong>Nomiki Konst</strong>, DNC Reform Commission Member</li>
       <li><strong>Alan Minsky</strong>, Executive Director, Progressive Democrats of America</li>
       <li><strong>Progressive Democrats of America</strong></li>
       <li><strong>Our Revolution</strong></li>
+      <li><strong>Arizona College Democrats</strong></li>
       
       
     </ul>
