--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #b12236; /* Working Families Party red */
+    background-color: #b12236; 
     color: white;
     padding: 16px 20px;
     font-size: 18px;
@@ -213,6 +213,7 @@
   <div class="max-w-4xl mx-auto px-4">
     <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Endorsements</h2>
     <a href="#national-endorsements" class="nav-link"><i>See National Leaders</i></a>
+    <br>
     <a>Helpful vocabulary: ADP = Arizona Democratic Party,  LD = Legislative District, SCM = (ADP) State Committee Member, PC = Precinct Committeeperson</a>
     <!-- Arizona Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mb-4">Arizona Leaders</h3>
@@ -224,10 +225,10 @@
       <li><strong>Dan O’Neal</strong>, State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
       <li><strong>Emily Kirkland</strong>, PC, LD 8, Former Executive Director, Progress Arizona</li>
       <li><strong>Paul Stapleton-Smith</strong>, SCM, LD 21</li>
-      <li><strong>Sen. Catherine Miranda</strong>, Senate Democratic Assistant Leader, LD 11</li>
-      <li><strong>Sen. Analise Ortiz</strong>, LD 24</li>
-      <li><strong>Rep. Mariana Sandoval</strong>, LD 13</li>
-      <li><strong>Rep. Brian Garcia</strong>, LD 8</li>
+      <li><strong>Sen. Catherine Miranda</strong>, State Senator & Senate Democratic Assistant Leader, LD 11</li>
+      <li><strong>Sen. Analise Ortiz</strong>, State Senator, LD 24</li>
+      <li><strong>Rep. Mariana Sandoval</strong>, State Representative, LD 13</li>
+      <li><strong>Rep. Brian Garcia</strong>, State Representative, LD 8</li>
       <li><strong>Melissa Galarza</strong>, SCM, LD 12</li>
       <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Shawnte Rothschild</strong>, Vice Chair, Arizona Democratic Party</li>
