--- a/index.html
+++ b/index.html
@@ -116,22 +116,22 @@
       }
     }
     .floating-button {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #b12236; 
-    color: white;
-    padding: 16px 20px;
-    font-size: 18px;
-    font-weight: bold;
-    border: none;
-    border-radius: 0;
-    text-align: center;
-    text-decoration: none;
-    z-index: 1000;
-    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s ease;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #b12236; 
+      color: white;
+      padding: 16px 20px;
+      font-size: 2.5rem;
+      font-weight: bold;
+      border: none;
+      border-radius: 0;
+      text-align: center;
+      text-decoration: none;
+      z-index: 1000;
+      box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.3s ease;
   }
   
   .floating-button:hover {
