--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
       0%   {background-color: #BF0A30;}
       25%  {background-color: #FED700;}
       50%  {background-color: #CE5C17;}
-      100% {background-color: #002868;}
+      75% {background-color: #002868;}
+      100% {background-color: #BF0A30;}
   }
     
   .floating-button:hover {
@@ -365,7 +366,7 @@
 </main>
 
 <a class="floating-button" href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform" target="_blank">
-        Endorse the Resolution Now →
+        Endorse the Resolution Now &#128279;
 </a>
 <script>
   function adjustContentPadding() {
