--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 
     nav a {
       color: white;
-      margin-left: 1.5rem;
       text-decoration: none;
       font-weight: bold;
       text-transform: uppercase;
@@ -151,7 +150,7 @@
 <body>
 
 <header class="floating-header" id="floatingHeader">
-  <h1>Stop Big Money AZ</h1>
+  <img src="bannerlogo.png" alt="Banner Logo">
   <nav>
     <a href="#home" class="nav-link">Home</a>
     <a href="#why" class="nav-link">Why This Matters</a>
