--- a/index.html
+++ b/index.html
@@ -36,12 +36,19 @@
       letter-spacing: 1px;
     }
 
+    header img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    
     nav {
       padding: 0 40px;
     }
 
     nav a {
       color: white;
+      margin: 0 15px;
       text-decoration: none;
       font-weight: bold;
       text-transform: uppercase;
