--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       background-color: #002868;
       color: #fff;
       position: fixed;
-      padding: 1rem 50px;
       width: 100%;
       top: 0;
       left: 0;
@@ -39,6 +38,8 @@
     header img {
       width: 100%;
       height: auto;
+      max-height: 20vh; /* Limit height to 20% of viewport */
+      object-fit: cover; /* Ensures the image fills width without distortion */
       display: block;
     }
     
