--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
       width: 100%;
       height: auto;
       max-height: 20vh; /* Limit height to 20% of viewport */
-      object-fit: cover; /* Ensures the image fills width without distortion */
       display: block;
     }
     
     nav {
-      padding: 0 40px;
+      padding: 15px 0px;
     }
 
     nav a {
