--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
+      text-align: center;
     }
 
     header h1 {
@@ -34,11 +35,19 @@
       font-weight: bold;
       letter-spacing: 1px;
     }
+    
+    .header-image-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      max-height: 20vh;
+      overflow: hidden;
+    }
 
-    header img {
-      width: 100%;
-      height: auto;
-      max-height: 20vh; /* Limit height to 20% of viewport */
+    .header-image-container img {
+      height: 20vh;
+      width: auto;
+      max-width: 100%;
       display: block;
     }
     
@@ -157,7 +166,9 @@
 <body>
 
 <header class="floating-header" id="floatingHeader">
-  <img src="bannerlogo.png" alt="Banner Logo">
+  <div class="header-image-container">
+    <img src="bannerlogo.png" alt="Banner Logo">
+  </div>
   <nav>
     <a href="#home" class="nav-link">Home</a>
     <a href="#why" class="nav-link">Why This Matters</a>
