--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
       left: 0;
       z-index: 1000;
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       align-items: center;
       text-align: center;
+      overflow: hidden;
     }
 
     header h1 {
@@ -35,24 +36,19 @@
       font-weight: bold;
       letter-spacing: 1px;
     }
-    
-    .header-image-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      max-height: 20vh;
-      overflow: hidden;
-    }
 
-    .header-image-container img {
-      height: 20vh;
-      width: auto;
+    header img {
+      max-height: 100%;
       max-width: 100%;
+      height: auto;
+      width: auto;
       display: block;
     }
     
     nav {
       padding: 15px 0px;
+      background-color: #002868;
+      text-align: center;
     }
 
     nav a {
@@ -67,6 +63,7 @@
 
     nav a:hover {
       text-decoration: underline;
+      color: #FED700;
     }
 
     main {
