--- a/index.html
+++ b/index.html
@@ -148,19 +148,17 @@
 </head>
 <body>
 
-<header class="floating-header" id="floatingHeader">
-  <div class="header-image-container">
-    <img src="bannerlogo.png" alt="Banner Logo">
-  </div>
-  <nav>
-    <a href="#home" class="nav-link">Home</a>
-    <a href="#why" class="nav-link">Why This Matters</a>
-    <a href="#resolution" class="nav-link">Our Resolution</a>
-    <a href="#endorsements" class="nav-link">Endorsements</a>
-    <a href="#about-us" class="nav-link">About Us</a>
-  </nav>
-
+<header class="banner-header" id="floatingHeader">
+  <img src="bannerlogo.png" alt="Banner Logo">
 </header>
+
+<div class="nav-header">
+  <a href="#home" class="nav-link">Home</a>
+  <a href="#why" class="nav-link">Why This Matters</a>
+  <a href="#resolution" class="nav-link">Our Resolution</a>
+  <a href="#endorsements" class="nav-link">Endorsements</a>
+  <a href="#about-us" class="nav-link">About Us</a>
+</div>
 
 <main class="main-content">
     <section id="home">
