--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       align-items: center;
       height: 20vh;
       overflow: hidden;
+      position: fixed
     }
 
     .banner-header img {
@@ -37,6 +38,7 @@
       background-color: #002868;
       text-align: center;
       padding: 15px 0;
+      position: fixed;
     }
 
     .nav-header a {
@@ -203,7 +205,7 @@
   <img src="bannerlogo.png" alt="Banner Logo">
 </header>
 
-<div class="nav-header">
+<div class="nav-header" id="floatingHeader">
   <a href="#home" class="nav-link">Home</a>
   <a href="#why" class="nav-link">Why This Matters</a>
   <a href="#resolution" class="nav-link">Our Resolution</a>
@@ -290,11 +292,13 @@
       <li><strong>Nick Collins</strong>, Secretary, ADP Progressive Council</li>
       <li><strong>Dan O’Neal</strong>, State Coordinator, Progressive Democrats of Arizona; Chair Emeritus, ADP Progressive Council</li>
       <li><strong>Emily Kirkland</strong>, PC, LD 8, Former Executive Director, Progress Arizona</li>
+      <li><strong>Jennifer Hilsbos</strong>, Chair, Pinal County Democratic Party</li>
       <li><strong>Paul Stapleton-Smith</strong>, SCM, LD 21</li>
       <li><strong>Sen. Catherine Miranda</strong>, State Senator & Senate Democratic Assistant Leader, LD 11</li>
       <li><strong>Sen. Analise Ortiz</strong>, State Senator, LD 24</li>
       <li><strong>Rep. Mariana Sandoval</strong>, State Representative, LD 13</li>
       <li><strong>Rep. Brian Garcia</strong>, State Representative, LD 8</li>
+      <li><strong>Markus Ceniceros</strong>, Board Member, Littleton Elementary School District; SCM, LD 22; 3rd Vice Chair, Maricopa County Democratic Party</li>
       <li><strong>Melissa Galarza</strong>, SCM, LD 12</li>
       <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
       <li><strong>Shawnte Rothschild</strong>, Vice Chair, Arizona Democratic Party</li>
@@ -313,6 +317,9 @@
       <li><strong>Jeffrey Tucker</strong>, SCM, LD 13; At-Large Board Member</li>
       <li><strong>Alex Kack</strong>, Executive Director, Pima County Democratic Party</li>
       <li><strong>Dhruv Rebba</strong>, Co-Chair, ADP AAPI Caucus, Vice President, ASU Young Dems</li>
+      <li><strong>Ashton Dolce</strong>, AZ State Chair, High School Democrats of America</li>
+      <li><strong>Alex Alvarez</strong>, SCM, LD 12</li>
+      <li><strong>Hunter Holt</strong>, 2nd Vice Chair, Pima County Democratic Party; President, Marana Unified School Board, State Senate Candidate, LD 17</li>
       <li><strong>Susie Thornton</strong>, Secretary & SCM, LD 12</li>
       <li><strong>Alex Ray Sanchez</strong>, Communications Chair, Pima County Democratic Party; Southern Arizona Vice Chair, ADP Progressive Council</li>
       <li><strong>Ann Heitland</strong>, Former Senior Vice-Chair, ADP; Former Chair, Coconino County Democratic Party</li>
@@ -364,7 +371,6 @@
       <li><strong>Rivko Knox</strong>, SCM, LD 2</li>
       <li><strong>Vivian Perry</strong>, Executive Committee Member & SCM, LD1</li>
       <li><strong>Rebecca Villalpando</strong>, SCM, LD 1</li>
-      <li><strong>Hunter Holt</strong>, 2nd Vice Chair, Pima County Democratic Party; President, Marana Unified School Board, State Senate Candidate, LD 17</li>
       <li><strong>Aaron Essif</strong>, SCM, LD 17</li>
       <li><strong>Ricky Spann</strong>, SCM</li>
       <li><strong>Melissa Westbrook</strong>, SCM, LD 12</li>
