--- a/index.html
+++ b/index.html
@@ -200,17 +200,19 @@
 </head>
 <body>
 
-<header class="banner-header" id="floatingHeader">
-  <img src="bannerlogo.png" alt="Banner Logo">
+<header>
+  <div class="banner-header" id="floatingHeader">
+    <img src="bannerlogo.png" alt="Banner Logo">
+  </div>
+  
+  <div class="nav-header" id="floatingHeader">
+    <a href="#home" class="nav-link">Home</a>
+    <a href="#why" class="nav-link">Why This Matters</a>
+    <a href="#resolution" class="nav-link">Our Resolution</a>
+    <a href="#endorsements" class="nav-link">Endorsements</a>
+    <a href="#about-us" class="nav-link">About Us</a>
+  </div>
 </header>
-
-<div class="nav-header" id="floatingHeader">
-  <a href="#home" class="nav-link">Home</a>
-  <a href="#why" class="nav-link">Why This Matters</a>
-  <a href="#resolution" class="nav-link">Our Resolution</a>
-  <a href="#endorsements" class="nav-link">Endorsements</a>
-  <a href="#about-us" class="nav-link">About Us</a>
-</div>
 
 <main class="main-content">
     <section id="home">
