--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       align-items: center;
       height: 20vh;
       overflow: hidden;
-      position: fixed
+      position: relative;
     }
 
     .banner-header img {
@@ -38,6 +38,8 @@
       background-color: #002868;
       text-align: center;
       padding: 15px 0;
+      top: 0;
+      position: sticky;
     }
 
     .nav-header a {
@@ -168,7 +170,7 @@
       padding: 10px 14px;
       border: none;
       font-weight: bold;
-      font-size: 0.95rem;
+      font-size: 0.6rem;
       transition: background-color 0.2s ease;
     }
     
@@ -232,7 +234,7 @@
       <h2>Why This Matters</h2>
       <div class="collapsible-section">
         <h3>The Research is Clear</h3>
-        <button class="toggle-button">Show More ▼</button>
+        <button class="toggle-button">Show More</button>
         <div class="content">
           <ul>
             <li><strong>Big Money pushes politics rightward.</strong> Removing bans on outside spending boosts Republican success and makes state legislatures more conservative. (Abdul-Razzak et al., 2017)</li>
@@ -243,7 +245,7 @@
       </div>
       <div class="collapsible-section">
         <h3>Big Money is Bigger than Ever</h3>
-        <button class="toggle-button">Show More ▼</button>
+        <button class="toggle-button">Show More</button>
         <div class="content">
           <ul>
             <li><strong>Nearly 60% of ads in 2022 Democratic House primaries</strong> were funded by outside groups, not candidates.</li>
@@ -253,7 +255,7 @@
       </div>
       <div class="collapsible-section">
         <h3>Arizona Hasn't Been Spared</h3>
-        <button class="toggle-button">Show More ▼</button>
+        <button class="toggle-button">Show More</button>
         <div class="content">
           <ul>
             <li><strong>$5.3 million in outside spending in the 2024 AZ-03 Primary:</strong> Yassamin Ansari edged out Raquel Terán by 39 votes, helped by over a million dollars in spending from pro-cryptocurrency Super-PACs.</li>
