--- a/index.html
+++ b/index.html
@@ -202,18 +202,19 @@
 </head>
 <body>
 
-<header>
-  <div class="banner-header" id="floatingHeader">
+<header class="banner-header">
+  <div>
     <img src="bannerlogo.png" alt="Banner Logo">
   </div>
-  
-  <div class="nav-header" id="floatingHeader">
+</header>
+<header class="nav-header">
+  <nav>
     <a href="#home" class="nav-link">Home</a>
     <a href="#why" class="nav-link">Why This Matters</a>
     <a href="#resolution" class="nav-link">Our Resolution</a>
     <a href="#endorsements" class="nav-link">Endorsements</a>
     <a href="#about-us" class="nav-link">About Us</a>
-  </div>
+  </nav>
 </header>
 
 <main class="main-content">
