--- a/index.html
+++ b/index.html
@@ -202,12 +202,10 @@
 </head>
 <body>
 
-<header class="banner-header">
-  <div>
-    <img src="bannerlogo.png" alt="Banner Logo">
-  </div>
+<header class="banner-header" id="floatingHeader">
+  <img src="bannerlogo.png" alt="Banner Logo">
 </header>
-<header class="nav-header">
+<header class="nav-header" id="floatingHeader">
   <nav>
     <a href="#home" class="nav-link">Home</a>
     <a href="#why" class="nav-link">Why This Matters</a>
