--- a/index.html
+++ b/index.html
@@ -202,20 +202,18 @@
 </head>
 <body>
 
-<div class="floatingHeader>
-  <header class="banner-header">
-    <img src="bannerlogo.png" alt="Banner Logo">
-  </header>
-  <header class="nav-header">
-    <nav>
-      <a href="#home" class="nav-link">Home</a>
-      <a href="#why" class="nav-link">Why This Matters</a>
-      <a href="#resolution" class="nav-link">Our Resolution</a>
-      <a href="#endorsements" class="nav-link">Endorsements</a>
-      <a href="#about-us" class="nav-link">About Us</a>
-    </nav>
-  </header>
-</div>
+<header class="banner-header">
+  <img src="bannerlogo.png" alt="Banner Logo">
+</header>
+<header class="nav-header" id="floatingHeader">
+  <nav>
+    <a href="#home" class="nav-link">Home</a>
+    <a href="#why" class="nav-link">Why This Matters</a>
+    <a href="#resolution" class="nav-link">Our Resolution</a>
+    <a href="#endorsements" class="nav-link">Endorsements</a>
+    <a href="#about-us" class="nav-link">About Us</a>
+  </nav>
+</header>
 <main class="main-content">
     <section id="home">
       <h2>Home</h2>
