--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <li><strong>$354,000 across the 2020 LD 2 & LD 3 Primaries:</strong> Through July, 79% of this outside spending had gone to just two candidates.</li>
             <li><strong>$841,000 in the 2018 AZ 02 Primary:</strong> Around $800,000 going to Ann Kirkpatrick, indlucing <a href="https://tucson.com/news/local/govt-and-politics/article_dee5a1a7-11d4-59af-aebc-fc19056f0658.html">$160,000</a> from James Murdoch funded Progress Tomorrow Inc.</li>
             <li><a href="https://www.tucsonsentinel.com/local/report/072823_primary_election_spending/outside-spending-climbs-tucson-democratic-primaries-city-clerk-probes-unregistered-pac/">Outside spending climbs in Tucson Democratic primaries; City Clerk probes unregistered PAC (2023).</a></li>
-            <li><a href="https://www.opensecrets.org/outside-spending/by_race/2024?disp=R&pty=A&type=P&t0-search=arizona">2024 Arizona Democratic Congressional Primaries Total Spending.</li>
+            <li><a href="https://www.opensecrets.org/outside-spending/by_race/2024?disp=R&pty=A&type=P&t0-search=arizona">2024 Arizona Democratic Congressional Primaries Total Spending.</a></li>
           </ul>
         </div>
       </div>
