--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
     <!-- National Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mt-10 mb-4">National Leaders</h3>
     <ul id="national-endorsements" class="space-y-2">
-      <li><strong>Sen. Bernie Sanders</strong>, US Senator, Vermont</li>
+      <li><strong>Sen. Bernie Sanders</strong>, US Senator, Vermont <a href="https://x.com/BernieSanders/status/1930703444425248943">(View his statement of support)</a></li>
       <li><strong>Lawrence Lessig</strong>, Chair, Equal Citizens</li>
       <li><strong>Rep. Ro Khanna</strong>, US Congressman, CA-17</li>
       <li><strong>Larry Cohen</strong>, Past President Communication Workers of America; Board Chair, Our Revolution; DNC Member</li>
