--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       background-color: #b12236; 
       color: white;
       padding: 16px 20px;
-      font-size: 2.5rem;
+      /*font-size: 2.5rem;*/
       font-weight: bold;
       border: none;
       border-radius: 0;
