--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     .nav-header a {
       color: #BF0A30;
-      margin: 0 15px;
+      margin: 0 0.5rem;
       text-decoration: none;
       font-weight: bold;
       text-transform: uppercase;
