--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <header class="banner-header">
   <img src="bannerlogo.png" alt="Banner Logo">
 </header>
-<header class="nav-header">
+<header class="nav-header" id="floatingHeader">
   <nav>
     <a href="#home" class="nav-link">Home</a>
     <a href="#why" class="nav-link">Why This Matters</a>
@@ -433,6 +433,35 @@
 <a class="floating-button" href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform" target="_blank">
         Endorse the Resolution Now &#128279;
 </a>
+
+<script>
+  codument.addEventListener("DOMContentLoaded", function () {
+    const header = document.getElementById('floatingHeader');
+    const content = document.querySelector('.main-content'); // or body if no wrapper
+    if (header && content) {
+      const offset = header.offsetHeight;
+    }
+
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener("click", function (e) {
+        e.preventDefault();
+        const targetID = this.getAttribute("href");
+        const targetElement = document.querySelector(targetID);
+
+        if (targetElement) {
+          const elementPosition = targetElement.getBoundingClientRect().top;
+          const offsetPosition = elementPosition + window.pageYOffset - offset;
+
+          window.scrollTo({
+            top: offsetPosition,
+            behavior: "smooth"
+          });
+        }
+      });
+    });
+  });
+</script>
+
 <script>
   document.querySelectorAll('.toggle-button').forEach(button => {
     button.addEventListener('click', () => {
