--- a/index.html
+++ b/index.html
@@ -435,10 +435,9 @@
 </a>
 
 <script>
-  codument.addEventListener("DOMContentLoaded", function () {
+  document.addEventListener("DOMContentLoaded", function () {
     const header = document.getElementById('floatingHeader');
-    const content = document.querySelector('.main-content'); // or body if no wrapper
-    if (header && content) {
+    if (header) {
       const offset = header.offsetHeight;
     }
 
