--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
   document.addEventListener("DOMContentLoaded", function () {
     const header = document.getElementById('floatingHeader');
     if (header) {
-      const offset = header.offsetHeight;
+      const offset = header.height;
     }
 
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
