--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stop Big Money AZ</title>
-  <link rel="icon" type="image/x-icon" href="favicon.png">
   <style>
     body {
       margin: 0;
@@ -448,7 +447,7 @@
 
         if (targetElement) {
           const elementPosition = targetElement.getBoundingClientRect().top;
-          const offsetPosition = elementPosition + window.pageYOffset - offset;
+          const offsetPosition = elementPosition + window.pageYOffset - offset - 5px;
 
           window.scrollTo({
             top: offsetPosition,
