--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
         if (targetElement) {
           const elementPosition = targetElement.getBoundingClientRect().top;
-          const offsetPosition = elementPosition + window.pageYOffset - offset - 5px;
+          const offsetPosition = elementPosition + window.pageYOffset - offset;
 
           window.scrollTo({
             top: offsetPosition,
