--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
       <li><strong>Sen. Analise Ortiz</strong>, State Senator, LD 24</li>
       <li><strong>Rep. Mariana Sandoval</strong>, State Representative, LD 13</li>
       <li><strong>Rep. Brian Garcia</strong>, State Representative, LD 8</li>
+      <li><strong>Raquel Terán</strong>, Former Chair, Arizona Democratic Party; Former Senate Democratic Leader</li>
       <li><strong>Markus Ceniceros</strong>, Board Member, Littleton Elementary School District; SCM, LD 22; 3rd Vice Chair, Maricopa County Democratic Party</li>
       <li><strong>Melissa Galarza</strong>, SCM, LD 12</li>
       <li><strong>Nicolas Mink</strong>, Vice Chair, Arizona Democratic Party</li>
