--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
       <li><strong>Sen. Priya Sundareshan</strong>, Senate Democratic Leader, LD 18</li>
       <li><strong>Sen. Catherine Miranda</strong>, Senate Democratic Assistant Leader, LD 11</li>
       <li><strong>Sen. Analise Ortiz</strong>, State Senator, LD 24</li>
+      <li><strong>Sen. Lauren Kuby</strong>, State Senator, LD 8</li>
       <li><strong>Rep. Mariana Sandoval</strong>, State Representative, LD 13</li>
       <li><strong>Rep. Brian Garcia</strong>, State Representative, LD 8</li>
       <li><strong>Raquel Terán</strong>, Former Chair, Arizona Democratic Party; Former Senate Democratic Leader</li>
@@ -383,7 +384,7 @@
       <li><strong>Melissa Westbrook</strong>, SCM, LD 12</li>
       <li><strong>Victoria Watson</strong>, Secretary, University of Arizona College Democrats</li>
       <li><strong>Joshua Evans</strong>, PC</li>
-      <li><strong>David Gámez</strong>, PC & Treasurer, LD 21</li>
+      <li><strong>David Gámez</strong>, PC & Treasurer, LD 21; Southern AZ Regional Director, AZ College Dems</li>
       <li><strong>Marilyn Weissman</strong>, SCM, LD 6</li>
       <li><strong>Mike Nickerson</strong>, SCM, LD 17</li>
       <li><strong>Chris Donat</strong>, Candidate for Congress, AZ 06; PC, LD 17</li>
