--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
   <section id="resolution">
     <h2>Our Resolution</h2>
-    <p><strong>Resolution for Submission to the Arizona State Democratic Party</strong></p>
+    <p><strong>Resolution passed by the Arizona State Democratic Party on June 7th, 2025</strong></p>
     <p><strong>Title:</strong> Resolution to Establish a “People’s Primary” Policy Banning Billionaires and Corporations from Buying or Unduly Influencing Democratic Primaries</p>
 
     <p>WHEREAS, the Democratic Party is the party of the working class and Americans who believe in a one person, one vote democracy where our elections are determined by We the People as equal citizens –– not billionaires and big corporations; and</p>
