--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Endorsements</h2>
     <a href="#national-endorsements" class="nav-link"><i>See National Leaders</i></a>
     <br>
-    <p>Want to add your name in support? Go to <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform"> this form</a> to sign in support.</p>
+    <p>Want to add your name as an endorser? Go to <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform">this form</a> to sign in support.</p>
     <p>Helpful vocabulary: ADP = Arizona Democratic Party,  LD = Legislative District, SCM = (ADP) State Committee Member, PC = Precinct Committeeperson</p>
     <!-- Arizona Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mb-4">Arizona Leaders</h3>
