--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <strong>We need your help.</strong> The SCMs, who will vote on our final policy on September 13th, 2025, are elected by the Precinct Committeepeople (PCs) of our Legislative District and County parties. For every three PCs a county gains, they get to elect one additional SCM. If we want to build an Arizona Democratic Party that stands up for the working class, and stands against billionaires and corporate influence, we need to recruit working class PCs that won't hesitate to advance the agenda of the 99% from inside the party.
       </p>
       <p>
-        To sign up to be a PC, fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLScZirR6sT6TJMkAfbdYQeaEAMBf-3__MqVhyIA2IRNG62L-wg/viewform?usp=header">this form</a> and we will get you connected with your Legislative District Chair!
+        To endorse our resolution and sign up to be a PC, fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform">this form</a> and we will get you connected with your Legislative District Chair!
       </p>
     </section>
 
@@ -438,8 +438,8 @@
 
 </main>
 
-<a class="floating-button" href="https://docs.google.com/forms/d/e/1FAIpQLScZirR6sT6TJMkAfbdYQeaEAMBf-3__MqVhyIA2IRNG62L-wg/viewform?usp=header" target="_blank">
-        Join our fight. Become a PC. &#128279;
+<a class="floating-button" href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform?usp=header" target="_blank">
+        Endorse our resolution. Become a PC. &#128279;
 </a>
 
 <script>
