--- a/index.html
+++ b/index.html
@@ -353,6 +353,10 @@
       <li><strong>Kevin Glover</strong>, SCM, LD 3</li>
       <li><strong>Mikah Dyer</strong>, PC, LD 28</li>
       <li><strong>Connor Roland</strong>, Northern Development VP, Young Democrats of AZ; PC, LD 13</li>
+      <li><strong>Issac Young Jr.</strong>, Political Director, Young Democrats of AZ; PC, LD 3</li>
+      <li><strong>Kaycee Campbell</strong>, Vice President, Maricopa County Young Democrats</li>
+      <li><strong>Cooper Long</strong>, Chief of Staff, University of Arizona College Democrats</li>
+      <li><strong>Joey Hauger</strong>, Finance Director, Arizona College Democrats</li>
       <li><strong>Eric Stafford</strong>, Vice Chair, LD 29</li>
       <li><strong>Sharon Regen</strong>, SCM, LD 1</li>
       <li><strong>Sherri Johnson</strong>, SCM, LD 12</li>
