--- a/index.html
+++ b/index.html
@@ -221,11 +221,18 @@
         On <strong>June 7th, 2025</strong>, State Committee Members (SCMs) of the Arizona Democratic Party (ADP) voted overwhelmingly to establish a "People’s Primary" — a bold move to stop billionaires and corporations from buying our primary elections. Over the next three months, an ad-hoc committee will work to draft a policy to "ensure, to the greatest extent possible, that candidates in Democratic primaries are not benefited by, dependent on, or elected due to outside or independent electioneering spending funded by big donors who are circumventing legal limits on direct contributions to a candidate’s campaign fund to spend tens or hundreds of thousands and even millions of dollars of private wealth to elect the candidates of their choice."
       </p>
       <p>
+        On <strong>June 28th, 2025</strong>, the North Carolina Democratic Party joined the Arizona Democratic Party in committing to establishing a "People's Primary." Want your state to be next? <a href="mailto:azdemprogressivecouncil@gmail.com">Contact us</a> to learn how to propose this resolution in your state.
+      </p>
+      <p>
         <strong>We need your help.</strong> The SCMs, who will vote on our final policy on September 13th, 2025, are elected by the Precinct Committeepeople (PCs) of our Legislative District and County parties. For every three PCs a county gains, they get to elect one additional SCM. If we want to build an Arizona Democratic Party that stands up for the working class, and stands against billionaires and corporate influence, we need to recruit working class PCs that won't hesitate to advance the agenda of the 99% from inside the party.
       </p>
       <p>
         To endorse our resolution and sign up to be a PC, fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform">this form</a> and we will get you connected with your Legislative District Chair!
       </p>
+      <p>
+        Additionally, please follow us on <a href="https://www.instagram.com/stopbigmoneyaz?utm_source=ig_web_button_share_sheet&igsh=cDI1a2R2aHd3bXBk">Instagram</a>, <a href="https://www.tiktok.com/@stopbigmoneyaz?is_from_webapp=1&sender_device=pc">TikTok</a>, <a href="https://www.facebook.com/profile.php?id=61576800702534#">Facebook</a>, and <a href="https://x.com/stopbigmoneyaz">Twitter/X</a> to stay up to date with our efforts.
+      </p>
+    
     </section>
 
     <section id="why">
@@ -438,7 +445,8 @@
     <p>The <strong>Stop Big Money AZ</strong> campaign is a project of a grassroots coalition of Arizona Democrats committed to building a party that puts the working class first, not billionaires and big corporations. The coalition is helmed by the <strong>Arizona Democratic Party Progressive Council</strong>, which is the largest Caucus or Council in the Arizona Democratic Party with over 150 members. We are united by the mission to bring the progressive values of our communities to the state legislature and beyond, to create the Arizona and United States of America we all deserve.
     Interested in joining us? Check us out on <a href="https://www.facebook.com/AZProgressives/">Facebook</a> and <a href="https://docs.google.com/forms/d/1bkaP9pGeW0iYT7zInHUMyKNmxxyYTzQLMgQj0RtNOh4/viewform?edit_requested=true&fbclid=IwY2xjawKqILNleHRuA2FlbQIxMABicmlkETEyTUppd1FFRFpPQ0w5YkpVAR6OcDpD0OghtricoHbzr2Of0YSrHXxsQlN_19tfICAERUbypdP7RwaVAVHRUQ_aem_qBXmQtzD1Urg48Fq7Tu-iA">sign up</a> to join our council!</p>
     <p>Please follow us on <a href="https://www.instagram.com/stopbigmoneyaz?utm_source=ig_web_button_share_sheet&igsh=cDI1a2R2aHd3bXBk">Instagram</a>, <a href="https://www.tiktok.com/@stopbigmoneyaz?is_from_webapp=1&sender_device=pc">TikTok</a>, <a href="https://www.facebook.com/profile.php?id=61576800702534#">Facebook</a>, and <a href="https://x.com/stopbigmoneyaz">Twitter/X</a>.</p>
-    <p><i>See a problem? Contact the site author, Ben Armentrout, at benarmentrout29@gmail.com. Please be nice - I'm better at building lasers than websites :)</i></p>
+    <p><i>See a problem with the website? Contact the site author, Ben Armentrout, at benarmentrout29@gmail.com. Please be nice - I'm better at building lasers than websites :)</i></p>
+    <p><i>Media or other inquiries can be directed to azdemprogressivecouncil@gmail.com.</i></p>
 </section>
 
 </main>
