--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
   </nav>
 </header>
 <main class="main-content">
+    <p style="font-size: 24px;">
+        <b><a href="https://us02web.zoom.us/meeting/register/HK2NEcAYTFWl_O3YDaDEWg">Register for our Stop Big Money USA Call </a> held on August 4th, 2025, at 5pm Eastern / 8pm Pacific & Arizona time.</b>
+    </p>
     <section id="home">
       <h2>Home</h2>
-      <p>
-        <a href="https://us02web.zoom.us/meeting/register/HK2NEcAYTFWl_O3YDaDEWg">Register for our Stop Big Money USA Call </a> held on August 4th, 2025, at 5pm Eastern / 8pm Pacific & Arizona time.
-      </p>
       <p>
         On <strong>June 7th, 2025</strong>, State Committee Members (SCMs) of the Arizona Democratic Party (ADP) voted overwhelmingly to establish a "People’s Primary" — a bold move to stop billionaires and corporations from buying our primary elections. Over the next three months, an ad-hoc committee will work to draft a policy to "ensure, to the greatest extent possible, that candidates in Democratic primaries are not benefited by, dependent on, or elected due to outside or independent electioneering spending funded by big donors who are circumventing legal limits on direct contributions to a candidate’s campaign fund to spend tens or hundreds of thousands and even millions of dollars of private wealth to elect the candidates of their choice."
       </p>
